@@ -15,3 +15,8 @@ Doc: let $K$ the field represented by
  It is allowed to use a monic irreducible polynomial $P$ in $K[X]$ instead of
  $M$, in which case, $M$ is defined as the ring of integers of $K[X]/(P)$,
  viewed as a $\Z_K$-module.
+
+ \misctitle{Huge discriminants, helping rnfdisc} the format $[T,B]$ is
+ also accepted instead of $T$ and computes an order which is maximal at all
+ maximal ideals specified by $B$, see \kbd{??rnfinit}: the valuation of $D$ is
+ then correct at all such maximal ideals but may be incorrect at other primes.
