@@ -15,6 +15,5 @@ Doc: given an \var{nf} structure attached to a number field $K$, as output
 
  \misctitle{Huge discriminants, helping rnfdisc} the format $[T,B]$ is
  also accepted instead of $T$ and computes an order which is maximal at all
- $p < B$, see \kbd{??rnfinit}: the valuation of $D$ is then correct at all
- prime ideals $\goth{p}$ above a rational prime $p < B$ but may be incorrect
- at other primes.
+ maximal ideals specified by $B$, see \kbd{??rnfinit}: the valuation of $D$ is
+ then correct at all such maximal ideals but may be incorrect at other primes.
