@@ -94,12 +94,20 @@ Doc: given an \var{nf} structure attached to a number field $K$, as output by
  \misctitle{Huge discriminants, helping rnfdisc} When $T$ has a
  discriminant which is difficult to factor, it is hard to compute
  $\Z_L$. As in \kbd{nfinit}, the special input format $[T,B]$
- is also accepted, where $T$ is a polynomial as above and $B$ is
- an integer. Instead of $\Z_L$, this produces an order which is maximal
- at all primes less than $B$. The result is actually a complete and correct
- \var{rnf} structure if all prime divisors of the relative ideal
- discriminant divide a rational prime less than $B$. In general, the order
- may not be maximal at primes $\goth{p} | p $ for $p \geq B$ such that
+ is also accepted, where $T$ is a polynomial as above and $B$ specifies a
+ list of maximal ideals. The following formats are recognized for $B$:
+
+ \item an integer: the list of all maximal ideals above a rational
+ prime $p < B$.
+
+ \item a vector of rational primes or prime ideals: the list of all maximal
+ ideals dividing an element in the list.
+
+ Instead of $\Z_L$, this produces an order which is maximal
+ at all such maximal ideals primes. The result is actually a complete and
+ correct \var{rnf} structure if the relative ideal discriminant factors
+ completely over this list of maximal ideals. In general, the order
+ may not be maximal at primes $\goth{p}$ not in the list such that
  $\goth{p}^2$ divides the relative ideal discriminant.
 
 Variant: Also available is
