@@ -29,6 +29,15 @@
 ; 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 1, 
 1, 1, 1, 1, 1, 1, 1/3, 1/3, 1/3], 6487513772307278389925284499624661, 648751
 3772307278389925284499624661]
+[[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0; 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0; 0, 0, 1,
+ 0, 0, 0, 0, 0, -1, 0, 1; 0, 0, 0, 1, 0, 0, 0, 0, -1, -1, 1; 0, 0, 0, 0, 1, 
+0, 0, 0, 1, -1, 1; 0, 0, 0, 0, 0, 1, 0, 0, -1, 1, 0; 0, 0, 0, 0, 0, 0, 1, 0,
+ 1, -1, 0; 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, -1; 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0
+; 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 1, 
+1, 1, 1, 1, 1, 1, 1/3, 1/3, 1/3], 6487513772307278389925284499624661, 648751
+3772307278389925284499624661]
+[[1, -2018006054; 0, 1], [1, [1/1009003027, 3/4036012108; 0, 1/4036012108]],
+ [4036, 3027; 0, 1009], [0, -1009]~]
 [[1, -2018006054; 0, 1], [1, [1/1009003027, 3/4036012108; 0, 1/4036012108]],
  [4036, 3027; 0, 1009], [0, -1009]~]
 [[1, -2018006054; 0, 1], [1, [1/1009003027, 3/4036012108; 0, 1/4036012108]],
@@ -38,6 +47,23 @@
 [[4036, 3027; 0, 1009], [0, -1009]~]
 [[4, 3; 0, 1], [0, -1009]~]
 [[4036, 3027; 0, 1009], [0, -1009]~]
+[[1, -2018006054; 0, 1], [1, [1/1009003027, 3/4036012108; 0, 1/4036012108]],
+ [4036, 3027; 0, 1009], [0, -1009]~]
+[[1, -2018006054; 0, 1], [1, [1/1009003027, 3/4036012108; 0, 1/4036012108]],
+ [4036, 3027; 0, 1009], [0, -1009]~]
+[[Mat(861), [1]], [[[;], [;], [;], [;], []~, 0, [y, [1, 0], 1, 1, [Mat(1), M
+at(1), Mat(1), Mat(1), 1, Mat(1), [1, 0], []], [0.E-57], [1], Mat(1), Mat(1)
+], [[1, [], []], 1, 1, [2, -1], []], [[;], [], []], [0, 0, [-1]]], [[Mat(861
+), [1]], [960, [120, 2, 2, 2], [808, 286, 575, [-860]~]], [[[3, [3]~, 1, 1, 
+1], 1; [7, [7]~, 1, 1, 1], 1; [41, [41]~, 1, 1, 1], 1], [[3, [3]~, 1, 1, 1],
+ 1; [7, [7]~, 1, 1, 1], 1; [41, [41]~, 1, 1, 1], 1]], [[[[2], [-286], Mat(3)
+, [[1, [1], [3, [3]~, 1, 1, 1]]~, 2, [2, Mat([2, 1])]]], [[6], [493], Mat(7)
+, [[1, [1], [7, [7]~, 1, 1, 1]]~, 3, [6, [2, 1; 3, 1]]]], [[40], [211], Mat(
+41), [[1, [1], [41, [41]~, 1, 1, 1]]~, 6, [40, [2, 3; 5, 1]]]]], [[2], Vecsm
+all([1]), Mat(1/861), 861861/2000, Mat(861)]], [[0; 0; 1; 0], [-20; 1; 0; 0]
+, [3; -1; 0; 0], [0; 0; 0; 1]]], [], [[;], [1, 0, 0, 0; 0, 1, 0, -1; 0, 0, 1
+, -1], [1, 0, 0; 0, -1, 0; 0, 0, -1; 0, 0, 0]], [480, [120, 2, 2], [808, 286
+, 575]], [Mat([0, 0, 0, 1]), Mat(-2), 1]], [1, 0, 0; 0, 2, 0; 0, 0, 2]]
 [[Mat(861), [1]], [[[;], [;], [;], [;], []~, 0, [y, [1, 0], 1, 1, [Mat(1), M
 at(1), Mat(1), Mat(1), 1, Mat(1), [1, 0], []], [0.E-57], [1], Mat(1), Mat(1)
 ], [[1, [], []], 1, 1, [2, -1], []], [[;], [], []], [0, 0, [-1]]], [[Mat(861
@@ -851,4 +877,4 @@ error("inconsistent dimensions in idealtwoelt.")
   ***   at top-level: ...=bnfcompress(bnfinit(x));rnfeltup(k,x,0)
   ***                                             ^---------------
   *** rnfeltup: incorrect type in checkrnf (t_VEC).
-Total time spent: 881
+Total time spent: 496
