@@ -170,6 +170,8 @@ BA  44- GP: the argument of a user member function is now a reference
     46- allow rnfdisc(k, polynomial with non-integral coeffs)
     47- allow rnfconductor(k, non-monic polynomial)
     48- poldisc(t_COMPLEX) now raises an exception (used to return -4)
+    49- rnfdisc(nf, [T,B]) allow B a list of primes and maximal ideals
+        (same for rnfbasis, rnfinit, rnfconductor)
 
   Added
      1- [libpari] nonsquare_Fl
